# candidate-staking

./: Anchor.toml  README.md  package-lock.json  package.json
.github/workflows/: action.yml
programs/application/: Cargo.toml
programs/application/src/: lib.rs  reward_calculator.rs
programs/candidate_staking/: Cargo.toml
programs/candidate_staking/src/: lib.rs
programs/general/: Cargo.toml
programs/general/src/: lib.rs
programs/job/: Cargo.toml
programs/job/src/: lib.rs
tests/: candidate_staking.ts
